FindaVenue/force-app/main/default/objects/Event__c/fields/Budget_for_food_and_drink__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_food_and_drink__c</fullName>
    <label>Budget for food and drink</label>
    <length>50</length>
    <type>Text</type>
</CustomField>