FindaVenue/force-app/main/default/objects/Event__c/fields/Christmas_Email__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google review</label>
    <type>Checkbox</type>
</CustomField>