FindaVenue/force-app/main/default/objects/Event__c/fields/Covid19_ready_delivered_catering__c.field-meta.xml
<CustomField>
    <fullName>Covid19_ready_delivered_catering__c</fullName>
    <label>Covid19 ready delivered catering?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes I am interested in catering boxes being delivered</fullName>
            </value>
            <value>
                <fullName>No I do not require catering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>