FindaVenue/force-app/main/default/objects/Event__c/fields/Date_Called__c.field-meta.xml
<CustomField>
    <fullName>Date_Called__c</fullName>
    <label>Date Called</label>
    <type>Date</type>
</CustomField>