FindaVenue/force-app/main/default/objects/Event__c/fields/Date_Time_Of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Of_Meeting__c</fullName>
    <label>Date &amp; Time Of Meeting</label>
    <type>DateTime</type>
</CustomField>