FindaVenue/force-app/main/default/objects/Event__c/fields/Deposit_we_request_total__c.field-meta.xml
<CustomField>
    <fullName>Deposit_we_request_total__c</fullName>
    <label>Deposit we request total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>