FindaVenue/force-app/main/default/objects/Event__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up - A year after Enquired Date</fullName>
            </value>
            <value>
                <fullName>Info Sent</fullName>
            </value>
            <value>
                <fullName>Follow Up Event 5 Days</fullName>
            </value>
            <value>
                <fullName>Follow Up Event 3 Days</fullName>
            </value>
            <value>
                <fullName>Follow Up Event 1 Month</fullName>
            </value>
            <value>
                <fullName>Follow Up Event 3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>