FindaVenue/force-app/main/default/objects/Event__c/fields/EmailV1__c.field-meta.xml
<CustomField>
    <fullName>EmailV1__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>