FindaVenue/force-app/main/default/objects/Event__c/fields/Enquired_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Enquired_Date_Time__c</fullName>
    <description>Populated as part of the Lead Conversion process, this field is used to trigger Flow Emails, based on default of 11am on the &apos;Enquired Date&apos; from Contact record</description>
    <label>Enquired Date/Time</label>
    <type>DateTime</type>
</CustomField>