FindaVenue/force-app/main/default/objects/Event__c/fields/estimated_Commisson_due__c.field-meta.xml
<CustomField>
    <fullName>estimated_Commisson_due__c</fullName>
    <label>estimated Commisson due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>