FindaVenue/force-app/main/default/objects/Event__c/fields/Event_Day__c.field-meta.xml
<CustomField>
    <fullName>Event_Day__c</fullName>
    <label>Event Day</label>
    <type>Date</type>
</CustomField>