FindaVenue/force-app/main/default/objects/Event__c/fields/Event_Number__c.field-meta.xml
<CustomField>
    <fullName>Event_Number__c</fullName>
    <label>Event Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>