FindaVenue/force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Booked (feedback)</fullName>
            </value>
            <value>
                <fullName>Booked (reminded)</fullName>
            </value>
            <value>
                <fullName>Booked feedback</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>1 year after enquire</fullName>
            </value>
            <value>
                <fullName>Bus development lost</fullName>
            </value>
            <value>
                <fullName>Check availability</fullName>
            </value>
            <value>
                <fullName>No number emailed asking for no</fullName>
            </value>
            <value>
                <fullName>Followed up email sent</fullName>
            </value>
            <value>
                <fullName>meeting at offices</fullName>
            </value>
            <value>
                <fullName>set up meeting at the office</fullName>
            </value>
            <value>
                <fullName>winner</fullName>
            </value>
            <value>
                <fullName>Followed up(from Bus development lost)</fullName>
            </value>
            <value>
                <fullName>Init sent</fullName>
            </value>
            <value>
                <fullName>agreed to zoom call</fullName>
            </value>
            <value>
                <fullName>Zoom call being arranged</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No good</fullName>
            </value>
            <value>
                <fullName>Send booking (FAV deposit)</fullName>
            </value>
            <value>
                <fullName>Send booking (Venue deposit)</fullName>
            </value>
            <value>
                <fullName>Send Confimation</fullName>
            </value>
            <value>
                <fullName>Send proposals</fullName>
            </value>
            <value>
                <fullName>Set up client to view</fullName>
            </value>
            <value>
                <fullName>Situation Changed</fullName>
            </value>
            <value>
                <fullName>zoom santa family enquiry</fullName>
            </value>
            <value>
                <fullName>Under control</fullName>
            </value>
            <value>
                <fullName>Viewing</fullName>
            </value>
            <value>
                <fullName>Bookng but getting an event date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>