FindaVenue/force-app/main/default/objects/Event__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <type>TextArea</type>
</CustomField>