FindaVenue/force-app/main/default/objects/Event__c/fields/Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_ID__c</fullName>
    <label>Internal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>