FindaVenue/force-app/main/default/objects/Event__c/fields/Landline__c.field-meta.xml
<CustomField>
    <fullName>Landline__c</fullName>
    <label>Landline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>