FindaVenue/force-app/main/default/objects/Event__c/fields/Last_date_contacted_date_booked__c.field-meta.xml
<CustomField>
    <fullName>Last_date_contacted_date_booked__c</fullName>
    <label>Last date contacted/ date booked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>