FindaVenue/force-app/main/default/objects/Event__c/fields/Location_Requested__c.field-meta.xml
<CustomField>
    <fullName>Location_Requested__c</fullName>
    <label>Location Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>