FindaVenue/force-app/main/default/objects/Event__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>150</length>
    <type>Text</type>
</CustomField>