FindaVenue/force-app/main/default/objects/Event__c/fields/Preferred_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Event_Date__c</fullName>
    <label>Preferred Event Date</label>
    <type>Date</type>
</CustomField>