FindaVenue/force-app/main/default/objects/Event__c/fields/Projected_Commission__c.field-meta.xml
<CustomField>
    <fullName>Projected_Commission__c</fullName>
    <label>Projected Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>