FindaVenue/force-app/main/default/objects/Event__c/fields/recordtypeIDText__c.field-meta.xml
<CustomField>
    <fullName>recordtypeIDText__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordtypeIDText</label>
    <type>Text</type>
</CustomField>