FindaVenue/force-app/main/default/objects/Event__c/fields/Room_hire_willing_to_pay__c.field-meta.xml
<CustomField>
    <fullName>Room_hire_willing_to_pay__c</fullName>
    <label>Room hire willing to pay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>