FindaVenue/force-app/main/default/objects/Event__c/fields/specific_venue_requirements__c.field-meta.xml
<CustomField>
    <fullName>specific_venue_requirements__c</fullName>
    <label>specific venue requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>