FindaVenue/force-app/main/default/objects/Event__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18th birthday</fullName>
            </value>
            <value>
                <fullName>1o year school reunion</fullName>
            </value>
            <value>
                <fullName>21st</fullName>
            </value>
            <value>
                <fullName>21st Birthday</fullName>
            </value>
            <value>
                <fullName>21st Party</fullName>
            </value>
            <value>
                <fullName>22nd Birthday</fullName>
            </value>
            <value>
                <fullName>23rd Birthday</fullName>
            </value>
            <value>
                <fullName>24th birthday</fullName>
            </value>
            <value>
                <fullName>25 year reunion</fullName>
            </value>
            <value>
                <fullName>25th Birthday</fullName>
            </value>
            <value>
                <fullName>26th Birthday</fullName>
            </value>
            <value>
                <fullName>30th Birthday</fullName>
            </value>
            <value>
                <fullName>33rd birthday</fullName>
            </value>
            <value>
                <fullName>35th Birthday</fullName>
            </value>
            <value>
                <fullName>40th Birthday</fullName>
            </value>
            <value>
                <fullName>45th birthday</fullName>
            </value>
            <value>
                <fullName>50th Birthday</fullName>
            </value>
            <value>
                <fullName>50th Birthday +</fullName>
            </value>
            <value>
                <fullName>60th Birthday</fullName>
            </value>
            <value>
                <fullName>65th birthday</fullName>
            </value>
            <value>
                <fullName>70th Birthday</fullName>
            </value>
            <value>
                <fullName>AFTER work party</fullName>
            </value>
            <value>
                <fullName>After Wedding Party</fullName>
            </value>
            <value>
                <fullName>After Work</fullName>
            </value>
            <value>
                <fullName>After party christmas</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Award Ceremony</fullName>
            </value>
            <value>
                <fullName>Award Ceromony</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Baby shower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>