FindaVenue/force-app/main/default/objects/Event__c/fields/video_put_together_of_your_event__c.field-meta.xml
<CustomField>
    <fullName>video_put_together_of_your_event__c</fullName>
    <label>video put together of your event?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes please</fullName>
            </value>
            <value>
                <fullName>No thanks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>