FindaVenue/force-app/main/default/objects/Event__c/fields/Welcome_Lead__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Lead__c</fullName>
    <formula>CreatedDate + 2/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Lead</label>
    <type>DateTime</type>
</CustomField>