FindaVenue/force-app/main/default/objects/Event__c/fields/Winning_Venue_Email__c.field-meta.xml
<CustomField>
    <fullName>Winning_Venue_Email__c</fullName>
    <description>Email address for the Winning Venue</description>
    <inlineHelpText>Email address for the Winning Venue</inlineHelpText>
    <label>Winning Venue Email</label>
    <type>Email</type>
</CustomField>