FindaVenue/force-app/main/default/objects/Event__c/fields/X1_year_on_Date_Enquired__c.field-meta.xml
<CustomField>
    <fullName>X1_year_on_Date_Enquired__c</fullName>
    <formula>IF(
  AND(
    MONTH( Date_Enquired__c ) = 2,
    DAY( Date_Enquired__c ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Date_Enquired__c ), 400 ) = 0, 
        AND( 
          MOD( YEAR( Date_Enquired__c ), 4 ) = 0,
          MOD( YEAR( Date_Enquired__c  ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR(  Date_Enquired__c ) + 1, 3, 1),
  DATE( YEAR( Date_Enquired__c ) + 1, MONTH( Date_Enquired__c ), DAY( Date_Enquired__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 year on Date Enquired</label>
    <type>Date</type>
</CustomField>