FindaVenue/force-app/main/default/objects/Event__c/fields/Your_Phone_number_Email__c.field-meta.xml
<CustomField>
    <fullName>Your_Phone_number_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Your Phone number Email</label>
    <type>Checkbox</type>
</CustomField>