FindaVenue/force-app/main/default/objects/Event__c/recordTypes/Find_a_Venue.recordType-meta.xml
<RecordType>
    <fullName>Find_a_Venue</fullName>
    <active>true</active>
    <label>Find a Venue</label>
</RecordType>