FindaVenue/force-app/main/default/objects/Event__c/recordTypes/Zoom_Party.recordType-meta.xml
<RecordType>
    <fullName>Zoom_Party</fullName>
    <active>true</active>
    <label>Zoom Party</label>
</RecordType>