FindaVenue/force-app/main/default/objects/Event__c/listViews/All_FAV_Events.listView-meta.xml
<ListView>
    <fullName>All_FAV_Events</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Number_of_People__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Day__c</columns>
    <columns>Venue2__c</columns>
    <columns>Contact__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Enquired__c</columns>
    <columns>Company_or_Private__c</columns>
    <columns>Event_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enquiry_Source__c</field>
        <operation>equals</operation>
        <value>FAV</value>
    </filters>
    <label>All FAV Events 2011-2021</label>
</ListView>