FindaVenue/force-app/main/default/objects/Event__c/listViews/Newly_Added_Events.listView-meta.xml
<ListView>
    <fullName>Newly_Added_Events</fullName>
    <columns>NAME</columns>
    <columns>Date_Enquired__c</columns>
    <columns>Event_Day__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company__c</columns>
    <columns>Company_or_Private__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Venue2__c</columns>
    <columns>Type_of_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Newly Added Events</label>
</ListView>